Fixing tmux TERM default

--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -4,7 +4,7 @@ set -g mouse-select-pane on   # Activate pane by clicking on it
 set -g mouse-resize-pane on   # Resize pane by dragging border
 set -g mouse-select-window on # Choose window by clicking on it
 
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 # Useful binds
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
