--- a/copy/.gitconfig
+++ b/copy/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-    name = GIT_NAME
-    email = GIT_EMAIL
+    name = William McGann
+    email = contact@WilliamMcGann.com
 [alias]
     lg1 = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
     lg = !"git lg1"
