Updating [n]vim/tmux config because they've been neglected.

--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -1,10 +1,7 @@
 set -g prefix C-a             # Change prefix from C-b to C-a
-set -g mode-mouse on          # Allow mouse drags to enter copy mode and select text
-set -g mouse-select-pane on   # Activate pane by clicking on it
-set -g mouse-resize-pane on   # Resize pane by dragging border
-set -g mouse-select-window on # Choose window by clicking on it
+set -g mouse on               # Allow mouse drags to enter copy mode and select text
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # Useful binds
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
@@ -41,3 +38,15 @@ set-option -g display-panes-colour colour166 #orange
 
 # clock
 set-window-option -g clock-mode-colour colour64 #green
+
+# Plugins managed by tpm
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+
+# Install tpm if not present
+if "test ! -d ~/.tmux/plugins/tpm" "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
+
+# Run tpm
+run ~/.tmux/plugins/tpm/tpm
