--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -1,43 +1,129 @@
 set -g prefix C-a             # Change prefix from C-b to C-a
-set -g mode-mouse on          # Allow mouse drags to enter copy mode and select text
-set -g mouse-select-pane on   # Activate pane by clicking on it
-set -g mouse-resize-pane on   # Resize pane by dragging border
-set -g mouse-select-window on # Choose window by clicking on it
+set -g mouse on               # Allow mouse drags to enter copy mode and select text
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+set -g allow-rename off
 
-# Useful binds
+# Reload alias
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
-bind | split-window -h # Horizontal split
-bind - split-window -v # Veritical split
 
-#### COLOUR (Solarized 256)
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+# Splits should be more sane
+unbind '"'
+unbind '%'
+bind | split-window -h
+bind - split-window -v
 
-# default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+# ctrl+shift+(up/down/left/right) to resize pane
+bind-key -n C-S-up resize-pane -U 5
+bind-key -n C-S-down resize-pane -D 5
+bind-key -n C-S-left resize-pane -L 10
+bind-key -n C-S-right resize-pane -R 10
 
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+# meta+(up/down/left/right) to switch panes
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
 
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+# Split
+#set-option -g pane-active-border-fg colour234
+#set-option -g pane-active-border-bg default
+#set-option -g pane-border-fg colour234
+#set-option -g pane-border-bg default
 
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+# Status
+#set -g status-left ''
+#set -g status-right '#[fg=colour176,bold,bg=colour236,bold] %B #[fg=colour146,bold,bg=colour236,bold]%d, #[fg=colour173,bold,bg=colour236,bold]%Y#[fg=default] #[fg=colour234,bold,bg=colour12,bold] %R '
+#set -g status-right-length 100
+#set -g status-bg default
+#setw -g window-status-format '#[fg=colour236,bold,bg=colour180,bold] #I #[fg=colour180,bold,bg=colour236,bold] #W '
+#setw -g window-status-current-format '#[fg=colour180,bold,bg=colour236,bold] #I #[fg=colour236,bold,bg=colour180,bold] #W '
 
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
+######################
+### DESIGN CHANGES ###
+######################
 
-# clock
-set-window-option -g clock-mode-colour colour64 #green
+# panes
+set -g pane-border-fg black
+set -g pane-active-border-fg brightred
+
+## Status bar design
+# status line
+set -g status-justify left
+set -g status-bg default
+set -g status-fg colour12
+set -g status-interval 2
+
+# messaging
+set -g message-fg black
+set -g message-bg yellow
+set -g message-command-fg blue
+set -g message-command-bg black
+
+#window mode
+setw -g mode-bg colour6
+setw -g mode-fg colour0
+
+# window status
+setw -g window-status-format " #F#I:#W#F "
+setw -g window-status-current-format " #F#I:#W#F "
+setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
+setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
+setw -g window-status-current-bg colour0
+setw -g window-status-current-fg colour11
+setw -g window-status-current-attr dim
+setw -g window-status-bg green
+setw -g window-status-fg black
+setw -g window-status-attr reverse
+
+# Info on left (I don't have a session display for now)
+set -g status-left ''
+
+# The modes {
+setw -g clock-mode-colour colour135
+setw -g mode-attr bold
+setw -g mode-fg colour196
+setw -g mode-bg colour238
+
+# }
+# The panes {
+
+set -g pane-border-bg colour0
+set -g pane-border-fg colour19
+set -g pane-active-border-bg colour0
+set -g pane-active-border-fg colour9
+
+# }
+# The statusbar {
+
+set -g status-position bottom
+set -g status-bg colour18
+set -g status-fg colour137
+set -g status-attr dim
+set -g status-left ''
+set -g status-right '#[fg=colour233,bg=colour19,bold] %d/%m #[fg=colour233,bg=colour8,bold] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-fg colour1
+setw -g window-status-current-bg colour19
+setw -g window-status-current-attr bold
+setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
+
+setw -g window-status-fg colour9
+setw -g window-status-bg colour18
+setw -g window-status-attr none
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-fg colour255
+setw -g window-status-bell-bg colour1
+
+# }
+# The messages {
+
+set -g message-attr bold
+set -g message-fg colour232
+set -g message-bg colour16
+
+# }
